2021-04-23  Frank Ch. Eigler <fche@redhat.com>

	PR27701
	* debuginfod-client.c (struct debuginfod_client): Add long-lived
	CURL easy and multi handles.
	(debuginfo_begin,debuginfod_end): ctor/dtor for these.
	(debuginfod_query_server): Rework to reuse easy & multi handles.
	(*_envvar): Just use the DEBUGINFOD_*_ENV_VAR directly instead.

	* debuginfod.cxx (dc_pool): New pile of reusable debuginfod_client
	objects for upstream federation connections.
	(debuginfod_pool_{begin,end,groom}): New functions.
	(handle_buildid): Use them.
	(handler_cb): Fix keep-alive given libmicrohttpd convention of multiple
	callbacks.

2021-04-15  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (groom): Only update database stats once.

2021-04-15  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (elf_classify): Recognize symtab-only stripped files
	like fedora's libicudata as debuginfo files.

2021-03-30  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (main): Set child thread names.

2021-03-07  Timm Bäder <tbaeder@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): Tweak
	double/long clamping arithmetic to avoid UB and warnings.

2021-02-25  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (handler_cb): Filter webapi for bad
	artifacttype keywords early for metric hygiene.

2021-02-14  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (main -U): Use bsdtar unconditionally.  Also map
	the debian-compatible .ipk (openembedded distro family) to same.

2021-02-04  Frank Ch. Eigler <fche@redhat.com>

	PR27092 low-memory handling
	* debuginfod.cxx (fdcache_mintmp): New parameter, with cmd-line option.
	(parse_opt): Parse it.
	(main): Default it.
	(statfs_free_enough_p): New function.
	(libarchive_fdcache::*): Call it to trigger emergency fdcache flush.
	(thread_main_scanner): Call it to report filesystem fullness metrics.
	(groom): Ditto.
	(set/add_metric): Take double rather than int64_t values.