@@ -1,3 +1,11 @@
+2021-04-26  Frank Ch. Eigler <fche@redhat.com>
+
+	PR26125
+	* debuginfod-client.c (debuginfod_clean_cache): For directory
+	rmdir, check mtime first.
+	(debuginfod_query_server): Try mkdir / mkstemp up to twice,
+	in case of race.
+
 2021-04-23  Frank Ch. Eigler <fche@redhat.com>
 
 	PR27701
